Fix threat wrapper heading spacing

--- a/client/my-sites/stats/activity-log/style.scss
+++ b/client/my-sites/stats/activity-log/style.scss
@@ -87,6 +87,10 @@
 	margin-bottom: 16px;
 	font-weight: 600;
 	color: $alert-red;
+
+	@include breakpoint( '>480px' ) {
+		margin-bottom: 24px;
+	}
 }
 
 .activity-log__threat-alert {
